<resources>
    <string name="app_name">JANHackathon</string>

    <string name="full_name">Full Name</string>
    <string name="rating">Avg Rating:</string>
    <string name="rate">Rate</string>
    <string name="algebra">Algebra</string>
    <string name="email_address">Email address</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot password??</string>
    <string name="log_in">Sign in</string>
    <string name="or">or</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="already_a_member_login">Already a member?? Login</string>
    <string name="continjue_with_google">Continue with google</string>
    <string name="create_an_account_with_email">Create an account with email</string>
    <string name="skip">Skip</string>
    <string name="create_your_jan_account">Create your Jan account</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_text">Intro text lorem ipsum and some other string that android studio and other</string>
    <string name="maths">Mathematics</string>
    <string name="math_desc">Lessons on arithmetic, algebra, Geometry, Plane shapes...</string>
    <string name="peercentage">12%</string>
    <string name="logo">logo</string>
    <string name="instructor_login">Instructor login</string>
    <string name="student_login">Student login</string>
</resources>
