<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_create_drawable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0" />

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/vpi_create_drawable"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="332dp"
        android:padding="10dp"
        app:fillColor="@color/colorAccent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont_create_toolbar"
        app:radius="8dp" />


    <FrameLayout
        android:id="@+id/cont_create_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/imb_create_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:onClick="goToDashBoard"
            android:layout_gravity="end"

            android:text="@string/skip" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!--we all should be able to guess what buttons are for lol-->
        <Button
            android:id="@+id/buttonP1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:textColor="#00763d"
            android:onClick="goToSignInPage"/>

        <Button
            android:id="@+id/buttonP2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:onClick="goToSignUpPage"
            android:textColor="#00763d" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>